# Fiber-Optic-Simulation-ITU-T-G.652-08-2024

./: .dockerignore  .gitignore  Makefile  README.md  compose.yaml  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile
apps/api/app/: main.py
apps/api/app/schemas/: __init__.py  base.py  (+3 more)
apps/api/tests/: test_contracts.py  test_errors.py  test_guidance.py  test_health.py  test_level1.py  test_level1_runtime.py  test_level1_validation_properties.py  test_openapi.py  test_sweeps.py
apps/web/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  ComparisonWorkspace.test.tsx  ComparisonWorkspace.tsx  EditorShell.test.tsx  EditorShell.tsx  FibreGeometryView.test.tsx  FibreGeometryView.tsx  GraphWorkspace.test.tsx  GraphWorkspace.tsx  Level1Form.test.tsx  Level1Form.tsx  Level1Preview.tsx  PowerDistancePlot.test.tsx  PowerDistancePlot.tsx  PulseAnimationLayer.tsx  PulseComparisonPlot.test.tsx  PulseComparisonPlot.tsx  RadialIntensityPlot.test.tsx  RadialIntensityPlot.tsx  SimulationInspector.tsx  StandardsWorkspace.test.tsx  StandardsWorkspace.tsx  SweepWorkspace.test.tsx  SweepWorkspace.tsx  VisualizationInspector.test.tsx  VisualizationInspector.tsx  comparison.test.ts  comparison.ts  fibreShowcase.test.ts  fibreShowcase.ts  fieldIssues.test.ts  fieldIssues.ts  graphWorkspace.ts  index.css  macrobend.test.ts  macrobend.ts  parameterBoundaries.ts  powerDistancePlot.ts  pulseAnimation.ts  (+5 more)
scripts/: export_openapi.py  generate_openapi_types.sh
(+1 files in other folders)
