[project]
name = "optical-fibre-simulator"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.139.2",
    "uvicorn==0.51.0",
    "fibre-sim==0.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
fibre-sim = { workspace = true }

[tool.uv.workspace]
members = ["packages/physics_core"]
