[project]
name = "optical-fibre-simulator"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.139.2",
    "uvicorn==0.51.0",
    "fibre-sim==0.0.0",
    "pydantic==2.13.4",
]

[tool.uv]
package = false

[tool.uv.sources]
fibre-sim = { workspace = true }

[tool.uv.workspace]
members = ["packages/physics_core"]

[dependency-groups]
dev = [
    "httpx2==2.7.0",
    "hypothesis==6.156.6",
    "mypy==2.3.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.22",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps/api", "packages/physics_core/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["packages/physics_core/src"]
explicit_package_bases = true
files = [
    "apps/api/app",
    "apps/api/tests",
    "packages/physics_core/src",
    "packages/physics_core/tests",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["apps/api/tests", "packages/physics_core/tests"]
addopts = "-q -p no:cacheprovider"
